welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:6: error: value =- is not a member of Int
		else{x =-1}
                       ^